# xchat

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
.cargo/: config.toml
nix/: dev.nix
src/: cli.rs  commands.rs  dispatch.rs  events.rs  main.rs  pages.rs  types.rs  util.rs  views.rs
src/dispatch/: commands.rs  xmtp.rs
src/dispatch/xmtp/: streams.rs  xmtp_async.rs
src/pages/: chat.rs
src/views/: chat_area.rs  chat_rooms.rs  input_box.rs
src/views/chat_area/: types.rs
static/: welcome_message.txt
