[package]
name = "xchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
futures = "0.3"
chrono = "0.4"
crossterm = { version = "0.27.0", features = ["event-stream"]}
ratatui = "0.25.0"
tui-textarea = "0.4"
anyhow = "1"
argh = "0.1.12"
xmtp_mls = { path = "../../xmtp/libxmtp/xmtp_mls" }
xmtp_api_grpc = { path = "../../xmtp/libxmtp/xmtp_api_grpc" }
ethers = "2"
hex = "0.4"
rand = "0.8"
walletconnect = "0.2.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread", "time", "tracing", "sync"] }
tokio-stream = "0.1"
lazy_static = "1.4"
color-eyre = "0.6.2"
directories = "5"
tracing-error = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
console-subscriber = "0.2"
